--- a/challenge/exploration.ipynb
+++ b/challenge/exploration.ipynb
@@ -341,11 +341,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "from datetime import datetime\n",
     "\n",
     "def is_high_season(fecha):\n",
     "    fecha_año = int(fecha.split(\"-\")[0])\n",
